Updated presentations in Lesson01-06.

--- a/Урок 03. Программное обеспечение ПК/Python - HW03.html
+++ b/Урок 03. Программное обеспечение ПК/Python - HW03.html
@@ -106,21 +106,24 @@
           Пронумеруйте задания и записывайте их решения под соответствующим номером.</p>
         <img src="https://i.imgur.com/fp50L0g.png" alt="Homework format">
         <p>После завершения всех заданий заархивируйте документ. Для этого нажмите <span class="hl-text">Правой Кнопкой
-            Мыши</span> по созданному текстовому документу, выберите <span class="hl-text">"Compress to..."</span> и <span class="hl-text">"ZIP File"</span>.
+            Мыши</span> по созданному текстовому документу, выберите <span class="hl-text">"Compress to..."</span> и
+          <span class="hl-text">"ZIP File"</span>.
         </p>
         <img src="https://i.imgur.com/cKbl90z.png" alt="Archiving">
         <p>Перейдите на сайт <a href="https://mystat.itstep.org">https://mystat.itstep.org</a> и войдите в свой аккаунт.
           Перейдите во вкладку <span class="hl-text">"Домашние задания"</span>. Наведите курсор на карточку с домашним
           заданием и нажмите на <span class="hl-text">Левую Кнопку Мыши</span>.</p>
         <img src="https://i.imgur.com/vOSrtOM.png" , height="400px">
-        <p>Далее нажмите на кнопку со значком <span class="hl-text">скрепки</span> и надписью <span class="hl-text">"Загрузить"</span>.</p>
+        <p>Далее нажмите на кнопку со значком <span class="hl-text">скрепки</span> и надписью <span
+            class="hl-text">"Загрузить"</span>.</p>
         <img src="https://i.imgur.com/zPPYzX9.png" width="100%">
         <p> Выберите созданный архив и нажмите <span class="hl-text">"Отправить"</span>.</p>
         <img src="https://i.imgur.com/uS2YP6X.png" height="100px">
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.1</h2>
-        <p>Посчитайте общую минимальную мощность, которая потребуется для следующей сборки ПК:
+        <p>Посчитайте <span class="hl-text">общую минимальную мощность</span>, которая потребуется для следующей сборки
+          ПК:
           <br>— Процессор AMD Ryzen 7500f
           <br>— Видеокарта RTX 4070ti 12GB Zotac Trinity
           <br>— ОЗУ 32GB DDR5 6000 G.Skill Flare X5
@@ -128,7 +131,7 @@
           <br>— SSD NVME 1TB XPG SX8200 Pro
           <br>— Кулер ID-Cooling SE 214 XT white argb
           <br>— Корпус Cooler Master HAF 500 white
-        <p>Укажите, какую мощность Вы бы порекомендовали для данной сборки и почему.
+        <p>Укажите, какую мощность Вы бы <span class="hl-text">порекомендовали</span> для данной сборки и почему.
         </p>
 
       </div>
@@ -137,49 +140,51 @@
         <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, стоимость
           которого не превышает <span class="hl-text">1 200</span> долларов (<span class="hl-text">около 2 000
             манат</span>) и удовлетворяет следующим требованиям:
-          <br>— Сборка подходит для комфортной игры в компьютерные игры
-          <br>— Выбран CPU
-          <br>— Выбран CPU Cooler
-          <br>— Выбран Motherboard
-          <br>— Выбран Memory
-          <br>— Выбран Storage
-          <br>— Выбран Video Card
-          <br>— Выбран Case
-          <br>— Выбран Power Supply
-          <br>— Присутствует объяснение причины выбора компонентов
+          <br>— Сборка подходит для <span class="hl-text">комфортной игры в компьютерные игры</span>
+          <br>— Выбран <span class="hl-text">CPU</span>
+          <br>— Выбран <span class="hl-text">CPU Cooler</span>
+          <br>— Выбран <span class="hl-text">Motherboard</span>
+          <br>— Выбран <span class="hl-text">Memory</span>
+          <br>— Выбран <span class="hl-text">Storage</span>
+          <br>— Выбран <span class="hl-text">Video Card</span>
+          <br>— Выбран <span class="hl-text">Case</span>
+          <br>— Выбран <span class="hl-text">Power Supply</span>
+          <br>— Присутствует <span class="hl-text">объяснение причины выбора компонентов</span>
         </p>
-        <p>После того, как сделаете сборку, скопируйте ссылку, которая будет у вас над выбранными компонентами, и
-          вставьте её в текстовый документ с домашним заданием.</p>
+        <p>После того, как сделаете сборку, <span class="hl-text">скопируйте ссылку</span>, которая будет у вас над
+          выбранными компонентами, и <span class="hl-text">вставьте её в текстовый документ с домашним заданием</span>.
+        </p>
         <img src="https://i.imgur.com/nsEXUnu.png">
 
-        <p>Далее подробно опишите причину выбора компонентов.</p>
+        <p>Далее подробно опишите <span class="hl-text">причину выбора компонентов</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.3</h2>
         <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, стоимость
           которого не превышает <span class="hl-text">600</span> долларов (<span class="hl-text">около 1 000
             манат</span>) и удовлетворяет следующим требованиям:
-          <br>— Сборка подходит для комфортного программирования
-          <br>— Выбран CPU
-          <br>— Выбран CPU Cooler
-          <br>— Выбран Motherboard
-          <br>— Выбран Memory
-          <br>— Выбран Storage
-          <br>— Выбран Video Card
-          <br>— Выбран Case
-          <br>— Выбран Power Supply
-          <br>— Присутствует объяснение причины выбора компонентов
+          <br>— Сборка подходит для <span class="hl-text">комфортного программирования</span>
+          <br>— Выбран <span class="hl-text">CPU</span>
+          <br>— Выбран <span class="hl-text">CPU Cooler</span>
+          <br>— Выбран <span class="hl-text">Motherboard</span>
+          <br>— Выбран <span class="hl-text">Memory</span>
+          <br>— Выбран <span class="hl-text">Storage</span>
+          <br>— Выбран <span class="hl-text">Video Card</span>
+          <br>— Выбран <span class="hl-text">Case</span>
+          <br>— Выбран <span class="hl-text">Power Supply</span>
+          <br>— Присутствует <span class="hl-text">объяснение причины выбора компонентов</span>
         </p>
-        <p>После того, как сделаете сборку, скопируйте ссылку, которая будет у вас над выбранными компонентами, и
-          вставьте её в текстовый документ с домашним заданием.</p>
+        <p>После того, как сделаете сборку, <span class="hl-text">скопируйте ссылку</span>, которая будет у вас над
+          выбранными компонентами, и <span class="hl-text">вставьте её в текстовый документ с домашним заданием</span>.
+        </p>
         <img src="https://i.imgur.com/nsEXUnu.png">
 
-        <p>Далее подробно опишите причину выбора компонентов.</p>
+        <p>Далее подробно опишите <span class="hl-text">причину выбора компонентов</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.4</h2>
-        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер
-          настроен правильно, а компоненты не бракованные).</p>
+        <p>По сборке компьютера и комментарию пользователя <span class="hl-text">объясните, в чём может быть
+            проблема</span> (считайте, что компьютер настроен правильно, а компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
         <p><span class="hl-text">CPU:</span> Intel Core i9-14900K 3.2 GHz 24-Core Processor
@@ -195,16 +200,15 @@
         </p>
 
         <h3>КОММЕНТАРИЙ ПОЛЬЗОВАТЕЛЯ:</h3>
-        <p>"Появились проблемы с моим игровым компьютером - периодически, во время игры, экран просто становится черным,
-          словно его выключили, и все система отключается. Это происходит случайным образом, без каких-либо
-          предупреждений или предшествующих признаков. Иногда он сразу же перезагружается после загрузки ОС. Когда
-          занимаюсь работой (пишу статьи), то таких проблем не возникает. Не могу понять, в чем может быть причина
-          такого поведения."</p>
+        <p>"Появились проблемы с моим игровым компьютером – периодически, во время игры, экран просто становится чёрным,
+          и вся система отключается. Это происходит случайным образом, без каких-либо предупреждений или предшествующих
+          признаков. Иногда он сразу же перезагружается после загрузки ОС. Когда занимаюсь работой (пишу статьи), таких
+          проблем не возникает. Не могу понять, в чем может быть причина такого поведения."</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.5</h2>
-        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер
-          настроен правильно, а компоненты не бракованные).</p>
+        <p>По сборке компьютера и комментарию пользователя <span class="hl-text">объясните, в чём может быть
+            проблема</span> (считайте, что компьютер настроен правильно, а компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
         <p><span class="hl-text">CPU:</span> AMD Ryzen 5 5600X 3.7 GHz 6-Core Processor
@@ -222,14 +226,14 @@
 
         <h3>КОММЕНТАРИЙ ПОЛЬЗОВАТЕЛЯ:</h3>
         <p>"Собрал новый компьютер, но у него всё время возникают проблемы. Он периодически выдаёт ошибки при выполнении
-          различных задач - игры и обычные рабочие программы. Видеокарта, блок питания и одна планка ОЗУ от старой
+          различных задач – игры и обычные рабочие программы. Видеокарта, блок питания и одна планка ОЗУ от старой
           сборки, две другие планки ОЗУ дал друг (планки рабочие, проверял в сборке друга). Не могу понять, в чём может
           быть причина этой нестабильности."</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.6</h2>
-        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер
-          настроен правильно, а компоненты не бракованные).</p>
+        <p>По сборке компьютера и комментарию пользователя <span class="hl-text">объясните, в чём может быть
+            проблема</span> (считайте, что компьютер настроен правильно, а компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
         <p><span class="hl-text">CPU:</span> Intel Core i9-14900K 3.2 GHz 24-Core Processor
@@ -245,15 +249,15 @@
         </p>
 
         <h3>КОММЕНТАРИЙ ПОЛЬЗОВАТЕЛЯ:</h3>
-        <p>"Последнее время мой компьютер стал нестабильно работать - время от времени он просто выключается, без
+        <p>"Последнее время мой компьютер стал нестабильно работать – время от времени он просто выключается, без
           видимых предупреждений. Это случается особенно часто, когда я играю в игры или когда выполняю по работе
           сложные вычисления. Эта проблема начала проявляться недавно, до этого все работало нормально. Я подозреваю,
           что дело может быть в процессоре или в его работе."</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.7 (Необязательное)</h2>
-        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что
-          компоненты не бракованные).</p>
+        <p>По сборке компьютера и комментарию пользователя <span class="hl-text">объясните, в чём может быть
+            проблема</span> (считайте, что компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
         <p><span class="hl-text">CPU:</span> AMD FX-4300 3.8 GHz Quad-Core Processor
