--- a/Урок 03. Программное обеспечение ПК/Python - PT03.html
+++ b/Урок 03. Программное обеспечение ПК/Python - PT03.html
@@ -92,12 +92,15 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 3.1</h2>
-        <p>Сделайте скриншот экрана и сохраните его как файл на рабочем столе. Затем создайте текстовый документ на
-          рабочем столе, выделите только что созданный документ и скриншот, затем заархивируйте их.</p>
+        <p>Сделайте <span class="hl-text">скриншот экрана</span> и <span class="hl-text">сохраните его как файл на
+            рабочем столе</span>. Затем создайте <span class="hl-text">текстовый документ</span> на рабочем столе,
+          выделите только что <span class="hl-text">созданный документ</span> и <span class="hl-text">скриншот</span>,
+          затем <span class="hl-text">заархивируйте</span> их.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 3.2</h2>
-        <p>Посчитайте общую минимальную мощность, которая потребуется для следующей сборки ПК:
+        <p>Посчитайте <span class="hl-text">общую минимальную мощность</span>, которая потребуется для следующей сборки
+          ПК:
           <br>— Процессор Intel Core I5 12400f
           <br>— Видеокарта RTX 4060 Inno3d compact
           <br>— ОЗУ 16gb ddr4 3200 G.Skill Aegis (2 модуля по 8гб)
@@ -106,20 +109,20 @@
           <br>— Кулер ID-Cooling SE-214 XT Basic
           <br>— Корпус PowerCase Mistral Micro D3B ARGB
         </p>
-        <p>Укажите, какую мощность Вы бы порекомендовали для данной сборки и почему.</p>
+        <p>Укажите, какую мощность Вы бы <span class="hl-text">порекомендовали</span> для данной сборки и почему.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 3.3</h2>
         <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, которая
           удовлетворяет следующим требованиям:
-          <br>— Выбран CPU
-          <br>— Выбран CPU Cooler
-          <br>— Выбран Motherboard
-          <br>— Выбран Memory
-          <br>— Выбран Storage
-          <br>— Выбран Video Card
-          <br>— Выбран Case
-          <br>— Выбран Power Supply
+          <br>— Выбран <span class="hl-text">CPU</span>
+          <br>— Выбран <span class="hl-text">CPU Cooler</span>
+          <br>— Выбран <span class="hl-text">Motherboard</span>
+          <br>— Выбран <span class="hl-text">Memory</span>
+          <br>— Выбран <span class="hl-text">Storage</span>
+          <br>— Выбран <span class="hl-text">Video Card</span>
+          <br>— Выбран <span class="hl-text">Case</span>
+          <br>— Выбран <span class="hl-text">Power Supply</span>
         </p>
       </div>
     </div>
