Updated exam table and minor fixes.

--- a/Урок 05. Алгоритмы/Python - HW05.html
+++ b/Урок 05. Алгоритмы/Python - HW05.html
@@ -136,8 +136,7 @@
         <p>Преподавателю дали задание подсчитать среднюю оценку студентов по одному предмету. Если средняя оценка <span
             class="hl-text">ниже 7 баллов</span>, то студенту нужно поставить метку <span class="hl-text">"Не
             допущен"</span>. В противном случае нужно поставить метку <span class="hl-text">"Допущен"</span>. Напишите в
-          словесной форме и составьте блок-схему алгоритма подсчёта
-          средней оценки и допуска.</p>
+          словесной форме и составьте блок-схему алгоритма подсчёта средней оценки и допуска всех студентов.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 5.5</h2>
