Changed notes in HW, added Cisco text in Lesson71-72.

--- a/Урок 21-27. Строки. Списки/Python - HW24.html
+++ b/Урок 21-27. Строки. Списки/Python - HW24.html
@@ -19,11 +19,10 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
-          до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code> и
-          конструкцию вида <code class="python"><b>('A' <= char <= 'Z') or ('a' <= char <= 'z')</b></code>. Не
-          используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Не
-          используйте срезы.</p>
+        <p>Оформляйте ввод и вывод данных в соответствии с <span class="hl-text">примерами заданий</span>. Используйте
+          только то, что было пройдено <span class="hl-text">до этого урока включительно</span>. Реализуйте защиту
+          входных данных от <span class="hl-text">исключений</span>.
+        </p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.1</h2>
