--- a/Урок 41-48. ООП/Python - HW48.html
+++ b/Урок 41-48. ООП/Python - HW48.html
@@ -18,6 +18,10 @@
     </div>
     <div class="right-block">
       <div class="right-rect">
+        <h2><strong>Примечание</strong></h2>
+        <p>Реализуйте защиту входных данных от <span class="hl-text">исключений</span>.</p>
+      </div>
+      <div class="right-rect">
         <h2>Домашнее Задание 48.1</h2>
         <p>Создайте <span class="hl-text">базу данных клиентов</span> и <span class="hl-text">реализуйте CRUD</span>.
           Сделайте так, чтобы <span class="hl-text">клиенты могли иметь несколько электронных карточек для оплат
