--- a/Урок 53-60. Tkinter/Python - HW56/Python - HW56.html
+++ b/Урок 53-60. Tkinter/Python - HW56/Python - HW56.html
@@ -18,6 +18,10 @@
     </div>
     <div class="right-block">
       <div class="right-rect">
+        <h2><strong>Примечание</strong></h2>
+        <p>Реализуйте защиту входных данных от <span class="hl-text">исключений</span>.</p>
+      </div>
+      <div class="right-rect">
         <h2>Домашнее Задание 56.1</h2>
         <p>Создайте класс <span class="hl-text">"Таксист"</span>. Этот класс должен <span class="hl-text">хранить поля
             для идентификатора</span>, <span class="hl-text">имени</span>, <span class="hl-text">фамилии</span> и <span
