--- a/Урок 07-09. Введение в Python/Python - HW08.html
+++ b/Урок 07-09. Введение в Python/Python - HW08.html
@@ -19,8 +19,9 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
-          до этого урока включительно.</p>
+        <p>Оформляйте ввод и вывод данных в соответствии с <span class="hl-text">примерами заданий</span>. Используйте
+          только то, что было пройдено <span class="hl-text">до этого урока включительно</span>.
+        </p>
         <h3>Как отправлять</h3>
         <p>Под каждую выдачу домашнего задания создавайте новый файл с кодом и заполняйте его, как указано ниже.</p>
         <img src="https://i.imgur.com/Wn3QvIk.png" alt="example" height="250px">
