--- a/Урок 10-14. Операторы ветвлений/Python - HW10.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW10.html
@@ -19,10 +19,9 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
-          до этого урока включительно. Не используйте готовые функции <code class="python"><b>sum()</b></code>, <code
-            class="python"><b>min()</b></code>, <code class="python"><b>max()</b></code>, а также оператор <code
-            class="python"><b>in</b></code> в условиях.</p>
+        <p>Оформляйте ввод и вывод данных в соответствии с <span class="hl-text">примерами заданий</span>. Используйте
+          только то, что было пройдено <span class="hl-text">до этого урока включительно</span>.
+        </p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 10.1</h2>
