--- a/Урок 15-20. Циклы/Python - HW16.html
+++ b/Урок 15-20. Циклы/Python - HW16.html
@@ -19,9 +19,10 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
-          до этого урока включительно. Задания выполняйте при помощи цикла <code class="python"><b>while</b></code>. Не
-          используйте в условии оператор <code class="python"><b>in</b></code>.</p>
+        <p>Оформляйте ввод и вывод данных в соответствии с <span class="hl-text">примерами заданий</span>. Используйте
+          только то, что было пройдено <span class="hl-text">до этого урока включительно</span>. Реализуйте защиту
+          входных данных от <span class="hl-text">исключений</span>.
+        </p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.1</h2>
