--- a/Урок 15-20. Циклы/Python - HW18.html
+++ b/Урок 15-20. Циклы/Python - HW18.html
@@ -19,10 +19,10 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
-          до этого урока включительно. Задания выполняйте при помощи цикла <code class="python"><b>for</b></code>, если
-          только в задаче не говорится явно об использовании цикла <code class="python"><b>while</b></code>. Не
-          используйте в условии оператор <code class="python"><b>in</b></code>.</p>
+        <p>Оформляйте ввод и вывод данных в соответствии с <span class="hl-text">примерами заданий</span>. Используйте
+          только то, что было пройдено <span class="hl-text">до этого урока включительно</span>. Реализуйте защиту
+          входных данных от <span class="hl-text">исключений</span>.
+        </p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 18.1</h2>
@@ -148,7 +148,8 @@
           которая <span class="hl-text">запрашивает с консоли начальное число</span> и <span class="hl-text">конечное
             число</span>, а затем <span class="hl-text">выводит в консоль все числа палиндромы</span>.</p>
         <p>Получение палиндрома можете взять из решения <span class="hl-text">ДЗ 16.6</span>, где используется цикл
-          <code class="python"><b>while</b></code>.</p>
+          <code class="python"><b>while</b></code>.
+        </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">90</span>
