--- a/Урок 28-34. Функции. Модули/Python - HW32.html
+++ b/Урок 28-34. Функции. Модули/Python - HW32.html
@@ -19,11 +19,9 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Используйте только то, что было пройдено до этого урока включительно. Не используйте в условии оператор
-          <code class="python"><b>in</b></code>. Не используйте готовые методы, только если в заданиях не говорится об
-          использовании тех или иных методов. Методы <code class="python"><b>format()</b></code>, <code
-            class="python"><b>split()</b></code> и <code class="python"><b>append()</b></code> использовать можно. Не
-          используйте срезы.
+        <p>Оформляйте ввод и вывод данных в соответствии с <span class="hl-text">примерами заданий</span>. Используйте
+          только то, что было пройдено <span class="hl-text">до этого урока включительно</span>. Реализуйте защиту
+          входных данных от <span class="hl-text">исключений</span>.
         </p>
       </div>
       <div class="right-rect">
