--- a/Урок 41-48. ООП/Python - HW42.html
+++ b/Урок 41-48. ООП/Python - HW42.html
@@ -18,6 +18,10 @@
     </div>
     <div class="right-block">
       <div class="right-rect">
+        <h2><strong>Примечание</strong></h2>
+        <p>Реализуйте защиту входных данных от <span class="hl-text">исключений</span>.</p>
+      </div>
+      <div class="right-rect">
         <h2>Домашнее Задание 42.1</h2>
         <p>Создайте класс <span class="hl-text">"Игрок"</span>. Этот класс должен <span class="hl-text">хранить
             поля</span>:
