--- a/Урок 10-14. Операторы ветвлений/Python - HW12.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW12.html
@@ -99,6 +99,7 @@
           <code class="python"><b>"Клиент может получить бонус."</b></code> или
           <code class="python"><b>"Клиент не выполнил условия для получения бонуса."</b></code>.
         </p>
+        <p><span class="hl-text"><b>Не используйте вложенные условные конструкции!</b></span></p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Клиент является участником бонусной программы (Y/N): <span class="input">N</span>
@@ -133,6 +134,7 @@
             консоль</span> <code class="python"><b>"Доступ разрешён."</b></code> или
           <code class="python"><b>"Доступ запрещён."</b></code> в зависимости от условий.
         </p>
+        <p><span class="hl-text"><b>Не используйте вложенные условные конструкции!</b></span></p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Права администратора присутствуют (Y/N): <span class="input">Y</span>
