--- a/Урок 10-14. Операторы ветвлений/Python - PT13.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT13.html
@@ -40,7 +40,7 @@
       <div class="right-rect">
         <h2>Практическое Задание 13.2</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число от <code
-              class="python"><b>0</b></code> до <code class="python"><b>23</b></code> включительно</span> и <span
+              class="python"><b>0</b></code> до</span> <code class="python"><b>24</b></code> и <span
             class="hl-text">выводит в консоль время суток</span>. Учтите, что пользователь может вписать число не в
           диапазоне <code class="python"><b>0</b></code>–<code class="python"><b>23</b></code>.
         </p>
