--- a/Урок 15-20. Циклы/Python - HW20.html
+++ b/Урок 15-20. Циклы/Python - HW20.html
@@ -181,8 +181,7 @@
           <li>Программа <span class="hl-text">запрашивает с консоли идентификатор клиента</span>.</li>
           <li>Если введённый идентификатор совпадает с идентификатором клиента, то программа <span
               class="hl-text">увеличивает на <code class="python"><b>1</b></code> товар</span>, который указан у
-            клиента, и <span class="hl-text">меняет арендованный товар клиента на</span> <code
-              class="python"><b>"Отсутствует"</b></code>.</li>
+            клиента, и <span class="hl-text">выдаёт клиенту товар в аренду</span>.</li>
         </ul>
         </p>
 
