--- a/Урок 21-27. Строки. Списки/Python - HW22.html
+++ b/Урок 21-27. Строки. Списки/Python - HW22.html
@@ -27,8 +27,7 @@
         <h2>Домашнее Задание 22.1</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку с примером</span>, <span
             class="hl-text">проверяет правильность использования скобок</span> и затем <span class="hl-text">она выводит
-            в консоль</span> <code class="python"><b>"Открывающих скобок больше, чем закрывающих."</b></code>, <code
-            class="python"><b>"Закрывающих скобок больше, чем открывающих."</b></code> или <code
+            в консоль</span> <code class="python"><b>"Скобки расставлены неверно."</b></code> или <code
             class="python"><b>"Скобки расставлены верно."</b></code>.</p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
