--- a/Урок 28-34. Функции. Модули/Python - PT29.html
+++ b/Урок 28-34. Функции. Модули/Python - PT29.html
@@ -22,7 +22,7 @@
         <p>Напишите функцию <span class="function"><b>draw_quad</b></span>, которая <span class="hl-text">принимает
             ширину</span>, <span class="hl-text">высоту</span> и <span class="hl-text">символ</span>. По умолчанию <span
             class="hl-text">третий параметр равен</span> <code class="python"><b>"*"</b></code>. Функция должна <span
-            class="hl-text">рисовать в консоли четырёхугольник из указанного символа</span> и <span
+            class="hl-text">рисовать в консоли заполненный четырёхугольник из указанного символа</span> и <span
             class="hl-text">указанного размера</span>.</p>
       </div>
       <div class="right-rect">
