--- a/Урок 28-34. Функции. Модули/Python - PT31.html
+++ b/Урок 28-34. Функции. Модули/Python - PT31.html
@@ -200,7 +200,8 @@
               индексу</span>.</li>
           <li>Реализуйте через функцию <span class="function"><b>remove_grade</b></span>:
             <ul>
-              <li>Функция <span class="hl-text">принимает индекс</span>.</li>
+              <li>Функция <span class="hl-text">принимает список оценок</span> и <span class="hl-text">индекс</span>.
+              </li>
               <li>Удаляет <span class="hl-text">оценку по индексу</span>.</li>
               <li>Ничего <span class="hl-text">не возвращает</span>.</li>
             </ul>
@@ -210,7 +211,7 @@
               <li>Функция <span class="hl-text">принимает список оценок</span> и <span class="hl-text">индекс</span>.
               </li>
               <li>Если индекс в промежутке от <code class="python"><b>0</b></code> до <span class="hl-text">размера
-                  списка оценок</span> включительно, то <span class="hl-text">возвращает</span> <code
+                  списка оценок</span>, то <span class="hl-text">возвращает</span> <code
                   class="python"><b>True</b></code>.</li>
               <li>В противном случае <span class="hl-text">возвращает</span> <code class="python"><b>False</b></code>.
               </li>
