--- a/Урок 49-50. Разбор финальных проектов/Python - FP.html
+++ b/Урок 49-50. Разбор финальных проектов/Python - FP.html
@@ -57,6 +57,7 @@
           <li>Касса частного образовательного учреждения</li>
           <li>Касса экскурсий</li>
           <li>Касса турагентства</li>
+          <li>Агрегатор скидок</li>
           <li class="no-padding-bottom">Касса автомастерской</li>
         </ol>
         <h3>Темы для финального проекта по категории "Аренда":</h3>
