--- a/Урок 15-20. Циклы/Python - PT16.html
+++ b/Урок 15-20. Циклы/Python - PT16.html
@@ -61,81 +61,6 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.3</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число, состоящее из цифр от <code
-              class="python"><b>0</b></code> до <code class="python"><b>3</b></code> включительно</span>, и <span
-            class="hl-text">выводит в консоль данные в зависимости от условий</span>. </p>
-        <p>Условия следующие:
-        <ul>
-          <li>Цифра <code class="python"><b>0</b></code> считается <span class="hl-text">началом новой команды</span>.
-            Если встречается цифра <code class="python"><b>0</b></code>, то <span class="hl-text">счётчик команд
-              увеличивается на</span> <code class="python"><b>1</b></code> и <span class="hl-text">выводится</span>
-            <code class="python"><b>"Выполнение"</b></span></code>. Счётчик <span class="hl-text">выводится в
-              конце</span>.
-          </li>
-          <li>Цифры <code class="python"><b>2</b></code>, <code class="python"><b>3</b></code> просто <span
-              class="hl-text">выводятся в консоль на каждой новой строке</span>.</li>
-          <li>Цифра <code class="python"><b>1</b></code> даёт команду на <span class="hl-text">пропуск вывода всех
-              последующих цифр до следующей цифры</span> <code class="python"><b>0</b></code>. После вывода цифры <code
-              class="python"><b>1</b></code>, <span class="hl-text">выводится</span> <code
-              class="python"><b>"Пропуск"</b></code>.</li>
-          <li>Проход должен быть с конца числа.</li>
-        </ul>
-        </p>
-        <h3>Пример работы в консоли:</h3>
-        <div class="console">
-          <pre><code>Введите число: <span class="input">203231202320</span>
-
-Данные следующие:
-Выполнение
-2
-3
-2
-Выполнение
-2
-1
-Пропуск
-Выполнение
-2
-
-Количество команд: 3</code></pre>
-        </div>
-      </div>
-      <div class="right-rect">
-        <h2>Практическое Задание 16.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает числа с консоли до тех пор, пока не
-            введут</span> <code class="python"><b>0</b></code>. После этого программа <span class="hl-text">выводит в
-            консоль</span> <code class="python"><b>"Последовательность неубывающая."</b></code>, если каждое следующее
-          введённое число больше-равно предыдущего, и <span class="hl-text">ничего</span> в противном случае.
-        </p>
-        <h3>Пример работы в консоли:</h3>
-        <div class="console">
-          <pre><code>Введите число: <span class="input">2</span>
-Введите число: <span class="input">2</span>
-Введите число: <span class="input">3</span>
-Введите число: <span class="input">0</span>
-
-Последовательность неубывающая.</code></pre>
-        </div>
-      </div>
-      <div class="right-rect">
-        <h2>Практическое Задание 16.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает число с консоли</span> и <span
-            class="hl-text">находит произведение цифр числа</span>. Если во время перебора цифр программа встречает
-          цифру <code class="python"><b>0</b></code>, то программа должна <span class="hl-text">остановиться</span> и
-          <span class="hl-text">вывести в консоль произведение цифр</span>, а
-          также <code class="python"><b>"Все цифры рассмотрены."</b></code>, если программа прошлась по
-          всем цифрам, и <code class="python"><b>"Перебор цифр был прерван."</b></code> в противном случае.
-        </p>
-        <h3>Пример работы в консоли:</h3>
-        <div class="console">
-          <pre><code>Введите число: <span class="input">12032</span>
-
-Произведение цифр: 6
-Перебор цифр был прерван.</code></pre>
-        </div>
-      </div>
-      <div class="right-rect">
-        <h2>Практическое Задание 16.6</h2>
         <p>Напишите программу, которая <span class="hl-text">загадывает число от <code class="python"><b>1</b></code> до
             <code class="python"><b>100</b></code> включительно</span>, затем <span class="hl-text">запрашивает с
             консоли число</span>. Если число угадано, то программа <span class="hl-text">выводит в консоль количество
@@ -179,7 +104,7 @@ randint(1, 100)  # Использование функции для генера
         </div>
       </div>
       <div class="right-rect">
-        <h2>Практическое Задание 16.7</h2>
+        <h2>Практическое Задание 16.4</h2>
         <p>Напишите программу, которая <span class="hl-text">проверяет корректность IP</span>. Программа <span
             class="hl-text">запрашивает с консоли числа от <code class="python"><b>0</b></code> до
             <code class="python"><b>255</b></code> включительно</span>. Если из
@@ -197,53 +122,40 @@ randint(1, 100)  # Использование функции для генера
         </div>
       </div>
       <div class="right-rect">
-        <h2>Практическое Задание 16.8</h2>
-        <p>На работе у <span class="hl-text">Teston Lebra</span> используются транзакции для передачи денег. Транзакции
-          имеют список пронумерованных команд от <code class="python"><b>1</b></code> до <code
-            class="python"><b>9</b></code> включительно. Вместе эти числа составляют идентификатор транзакции.
-        </p>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли цифры от <code
-              class="python"><b>1</b></code> до <code class="python"><b>9</b></code> включительно до тех пор, пока не
-            встретит два нуля подряд</span>. Эти цифры программа <span class="hl-text">соединяет в одно число –
-            идентификатор</span>. Если проблем никаких нет, то программа <span class="hl-text">выводит в консоль</span>
-          <code class="python"><b>"Транзакция {идентификатор} успешно выполнена."</b></code>. В противном случае
-          программа должна <span class="hl-text">писать</span> <code class="python"><b>"Ошибка транзакции."</b></code>,
-          а затем <code class="python"><b>"Откат команды {последняя_цифра_идентификатора}."</b></code> <span
-            class="hl-text">до тех пор, пока не останутся цифры в транзакции</span>.
-        </p>
-        <p>Условия прерывания транзакции:
-        <ul>
-          <li>После цифры <code class="python"><b>0</b></code> идёт не цифра <code class="python"><b>0</b></code>.</li>
-          <li>Транзакция не начинается с цифры <code class="python"><b>1</b></code>.</li>
-          <li>После цифры <code class="python"><b>6</b></code> не идёт <code class="python"><b>7</b></code> или <code
-              class="python"><b>8</b></code>.</li>
-          <li>После цифры <code class="python"><b>7</b></code> или <code class="python"><b>8</b></code> идёт <code
-              class="python"><b>7</b></code> или <code class="python"><b>8</b></code>.</li>
-        </ul>
-        </p>
-        <h3>Пример работы в консоли 1:</h3>
+        <h2>Практическое Задание 16.5</h2>
+        <p>Напишите программу, которая <span class="hl-text">последовательно запрашивает с консоли стоимость
+            корзины</span>, <span class="hl-text">скидку от <code class="python"><b>1</b></code> до <code
+              class="python"><b>100</b></code></span> и <span class="hl-text">расстояние от <code
+              class="python"><b>0</b></code> до <code class="python"><b>20</b></code> включительно</span>. Если какой-то
+          запрос с консоли оказался <span class="hl-text">неверным</span>, то программа <span class="hl-text">полностью
+            заново запрашивает данные</span>. Программа должна <span class="hl-text">применить указанную скидку к
+            стоимости корзины</span>. Затем программа за каждый <code class="python"><b>1</b></code> км должна <span
+            class="hl-text">добавить к итоговой сумме</span> <code class="python"><b>150</b></code>.</p>
+        <h3>Пример работы в консоли:</h3>
         <div class="console">
-          <pre><code>Введите номер команды: <span class="input">1</span>
-Введите номер команды: <span class="input">4</span>
-Введите номер команды: <span class="input">2</span>
-Введите номер команды: <span class="input">0</span>
-Введите номер команды: <span class="input">6</span>
-
-Ошибка транзакции
-Откат команды 0.
-Откат команды 2.
-Откат команды 4.
-Откат команды 1.</code></pre>
-        </div>
-        <h3>Пример работы в консоли 2:</h3>
-        <div class="console">
-          <pre><code>Введите номер команды: <span class="input">1</span>
-Введите номер команды: <span class="input">4</span>
-Введите номер команды: <span class="input">2</span>
-Введите номер команды: <span class="input">0</span>
-Введите номер команды: <span class="input">0</span>
-
-Транзакция 14200 успешно выполнена.</code></pre>
+          <pre><code>Стоимость корзины: <span class="input">-5000</span>
+================================
+Указана неверная стоимость корзины.
+Запрос перезапущен.
+================================
+Стоимость корзины: <span class="input">5000</span>
+Введите скидку (%): <span class="input">125</span>
+================================
+Указана неверная скидка.
+Запрос перезапущен.
+================================
+Стоимость корзины: <span class="input">5000</span>
+Введите скидку (%): <span class="input">50</span>
+Введите расстояние (км): <span class="input">21</span>
+================================
+Указано неверное расстояние.
+Запрос перезапущен.
+================================
+Стоимость корзины: <span class="input">5000</span>
+Введите скидку (%): <span class="input">50</span>
+Введите расстояние (км): <span class="input">10</span>
+================================
+Итоговая стоимость: 4000</code></pre>
         </div>
       </div>
     </div>
