Updated images in HW03.

--- a/Урок 03. Программное обеспечение ПК/Python - HW03.html
+++ b/Урок 03. Программное обеспечение ПК/Python - HW03.html
@@ -113,10 +113,9 @@
         <p>Перейдите на сайт <a href="https://mystat.itstep.org">https://mystat.itstep.org</a> и войдите в свой аккаунт.
           Перейдите во вкладку <span class="hl-text">"Домашние задания"</span>. Наведите курсор на карточку с домашним
           заданием и нажмите на <span class="hl-text">Левую Кнопку Мыши</span>.</p>
-        <img src="https://i.imgur.com/vOSrtOM.png" , height="400px">
-        <p>Далее нажмите на кнопку со значком <span class="hl-text">скрепки</span> и надписью <span
-            class="hl-text">"Загрузить"</span>.</p>
-        <img src="https://i.imgur.com/zPPYzX9.png" width="100%">
+        <img src="https://i.imgur.com/hKPSv2m.png" , width="600px">
+        <p>Далее нажмите на надпись <span class="hl-text">"Выберите файл"</span>.</p>
+        <img src="https://i.imgur.com/2cq4trf.png" width="600px">
         <p> Выберите созданный архив и нажмите <span class="hl-text">"Отправить"</span>.</p>
         <img src="https://i.imgur.com/uS2YP6X.png" height="100px">
       </div>
