Fixed tips for PT08.4 and PT09.7.

--- a/Урок 07-09. Введение в Python/Python - PT08.html
+++ b/Урок 07-09. Введение в Python/Python - PT08.html
@@ -77,9 +77,9 @@
             банок краски</span>.
         </p>
         <h3>Подсказка</h3>
-        <p>Чтобы получилось целое число, нужно граммы в банке с краской поделить на
-          <code><span class="number"><b>2</b></span></code> и добавить к итоговому количеству граммов, затем нацело
-          поделить на граммы в банке.
+        <p>Чтобы получилось целое число округлённое вверх, нужно к <span class="hl-text">итоговому количеству
+            граммов</span> добавить <span class="hl-text">граммы в банке</span>, отняв <code
+            class="python"><b>1</b></code>, затем нацело поделить на <span class="hl-text">граммы в банке</span>.
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
