--- a/Урок 07-09. Введение в Python/Python - PT09.html
+++ b/Урок 07-09. Введение в Python/Python - PT09.html
@@ -102,9 +102,10 @@
             за рулон</span>, затем <span class="hl-text">выводит в консоль количество рулонов</span> и <span
             class="hl-text">итоговую цену</span>.</p>
         <h3>Подсказка</h3>
-        <p>Чтобы получилось целое число, нужно метры в рулоне поделить на
-          <code class="python"><b>2</b></code> и добавить к итоговому количеству площади поклейки, затем
-          нацело поделить на метры в рулоне.
+        <p>Чтобы получилось <span class="hl-text">целое число рулонов округлённое вверх</span>, нужно к <span
+            class="hl-text">метрам в рулоне</span> добавить <span class="hl-text">количество метров в рулоне</span>,
+          отняв <code class="python"><b>1</b></code>, затем нацело поделить на <span class="hl-text">метры в
+            рулоне</span>.
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
